fixes #252 uses javascript in the header.html file to swap between 80vh and auto height

--- a/www-root/viewbook.html
+++ b/www-root/viewbook.html
@@ -23,7 +23,8 @@
       </button>
       <div class="row container-fluid">
         <div class="col-xs-8">
-          <a href="/"> <img class="msudenver_logo" src="style-assets/media/template-assets/msu-denver-logo.svg" alt="MSU Denver Homepage"> </a>
+          <a href="/"> <img class="msudenver_logo" src="style-assets/media/template-assets/msu-denver-logo.svg"
+              alt="MSU Denver Homepage"> </a>
         </div>
       </div>
     </div>
@@ -50,7 +51,8 @@
           </ul>
           <ul id="menu-nav" class="nav navbar-nav">
             <li class="dropdown collapse navbar-collapse">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
                 <li><a href="/about">About MSU Denver</a></li>
                 <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
@@ -64,7 +66,9 @@
               </ul>
             </li>
             <li class="dropdown collapse navbar-collapse">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                aria-expanded="false">Prospective Students <i role="presentation"
+                  class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
                 <li><a href="/admissions">Admissions</a></li>
                 <li><a href="/admissions/student-types/first-timeundergraduate/">First-Time Undergraduate</a></li>
@@ -80,7 +84,8 @@
               </ul>
             </li>
             <li class="dropdown collapse navbar-collapse">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
                 <li><a href="/academics/">Academics Overview</a></li>
                 <li><a href="/programs/">Academic Programs</a></li>
@@ -98,7 +103,8 @@
               </ul>
             </li>
             <li class="dropdown collapse navbar-collapse">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
                 <li><a href="/alumni/">Alumni &amp; Friends Home</a></li>
                 <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
@@ -116,7 +122,8 @@
             <li id="nav-search" type="button">
               <a href="#" data-toggle="modal" data-target="#searchModal">
                 <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
-                <span class="search-button-text"><span class="fa fa-search search-desktop"></span> <span class="search-text">SEARCH</span></span>
+                <span class="search-button-text"><span class="fa fa-search search-desktop"></span> <span
+                    class="search-text">SEARCH</span></span>
               </a>
             </li>
           </ul>
@@ -151,11 +158,12 @@
 <!-- allow mobile menu dropdown to scroll -->
 <script>
   // $('#bs-example-navbar-collapse-1').css('max-height',$(window).height()-79);
+
 </script>
 
 <script>
   // scrollTop function
-  $(window).scroll(function() {
+  $(window).scroll(function () {
     var width_threshold = 900;
     var href = document.location.href;
     var position = $(window).scrollTop();
@@ -170,7 +178,20 @@
     }
 
   });
+
+  $('.navbar-toggle').click(function () {
+    console.log("Hello")
+    if ($('#bs-example-navbar-collapse-1').height() < .7 * screen.height) {
+      console.log("Little")
+      $('#bs-example-navbar-collapse-1').css('height', '80vh');
+    } else {
+      console.log("Big")
+      $('#bs-example-navbar-collapse-1').css('height', 'auto');
+    }
+  });
+
 </script>
+
 
   <!-- <div class="container">
   <div class="col-xs-12">
