--- a/www-root/index.html
+++ b/www-root/index.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1">
 </head>
 
 <body>
-	<h2>Main Layouts</h2>
-	<h3><a href="/possible.html">Reimagine Possible</a></h3>
-	<h3><a href="/homepage.html"> Homepage layout Localhost</a></h3>
-	<h3><a href="/web-builder/www-root/homepage.html"> Homepage layout Git </a></h3>
-	<h3><a href="/2column.html"> 2column layout Localhost</a></h3>
-	<h3><a href="/web-builder/www-root/1column.html"> 1column layout Git </a></h3>
-	<h3><a href="/1column.html"> 1column layout Localhost</a></h3>
-	<h3><a href="/web-builder/www-root/2column.html"> 2column layout Git </a></h3>
-	<h3><a href="/admissions.html"> Admissions layout Localhost</a></h3>
-	<h3><a href="/web-builder/www-root/admissions.html"> Admissions layout Git</a></h3>
-	<h3><a href="/president.html"> President layout Localhost</a></h3>
-	<h3><a href="/web-builder/www-root/president.html"> President layout Git</a></h3>
+  <h2>Main Layouts</h2>
+  <h3><a href="/possible.html">Reimagine Possible</a></h3>
+  <h3><a href="/homepage.html"> Homepage layout Localhost</a></h3>
+  <h3><a href="/web-builder/www-root/homepage.html"> Homepage layout Git </a></h3>
+  <h3><a href="/2column.html"> 2column layout Localhost</a></h3>
+  <h3><a href="/web-builder/www-root/1column.html"> 1column layout Git </a></h3>
+  <h3><a href="/1column.html"> 1column layout Localhost</a></h3>
+  <h3><a href="/web-builder/www-root/2column.html"> 2column layout Git </a></h3>
+  <h3><a href="/admissions.html"> Admissions layout Localhost</a></h3>
+  <h3><a href="/web-builder/www-root/admissions.html"> Admissions layout Git</a></h3>
+  <h3><a href="/president.html"> President layout Localhost</a></h3>
+  <h3><a href="/web-builder/www-root/president.html"> President layout Git</a></h3>
 
-	<h2>Student Hub Layouts</h2>
-	<h3><a href="/studenthubhome.html"> Student Hub layout </a></h3>
-	<h3><a href="/web-builder/www-root/studenthubhome.html"> Student Hub layoutGit</a></h3>
-	<h3><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h3>
-	<h3><a href="/web-builder/www-root/studenthubsecondary.html"> Student Hub inner layout Git</a></h3>
+  <h2>Student Hub Layouts</h2>
+  <h3><a href="/studenthubhome.html"> Student Hub layout </a></h3>
+  <h3><a href="/web-builder/www-root/studenthubhome.html"> Student Hub layoutGit</a></h3>
+  <h3><a href="/studenthubsecondary.html"> Student Hub inner layout </a></h3>
+  <h3><a href="/web-builder/www-root/studenthubsecondary.html"> Student Hub inner layout Git</a></h3>
 
-	<h2>RED Layouts</h2>
-	<h3><a href="/newsroom.html"> Newsroom Layout </a></h3>
-	<h3><a href="/web-builder/www-root/newsroom.html"> Newsroom Git</a></h3>
-	<h3><a href="/newsroom-detail.html"> Newsroom Detail </a></h3>
-	<h3><a href="/web-builder/www-root/newsroom-detail.html"> Newsroom Detail Git </a></h2>
+  <h2>RED Layouts</h2>
+  <h3><a href="/newsroom.html"> Newsroom Layout </a></h3>
+  <h3><a href="/web-builder/www-root/newsroom.html"> Newsroom Git</a></h3>
+  <h3><a href="/newsroom-detail.html"> Newsroom Detail </a></h3>
+  <h3><a href="/web-builder/www-root/newsroom-detail.html"> Newsroom Detail Git </a></h2>
 
-	<h2>Vendor and Third party Layouts Layouts</h2>
-	<h3><a href="/1column-vendor.html"> 1 Column  Vendor </a></h3>
-	<h3><a href="/web-builder/www-root/1column-vendor.html"> 1column vendor layout Git</a></h3>
-	<!-- <h3><a href="/viewbook.html"> Viewbook </a></h3>
-	<h3><a href="/web-builder/www-root/viewbook.html"> Viewbook Git</a></h3> -->
+    <h2>Vendor and Third party Layouts Layouts</h2>
+    <h3><a href="/1column-vendor.html"> 1 Column Vendor </a></h3>
+    <h3><a href="/web-builder/www-root/1column-vendor.html"> 1column vendor layout Git</a></h3>
+    <h3><a href="/viewbook.html"> Viewbook </a></h3>
+    <h3><a href="/web-builder/www-root/viewbook.html"> Viewbook Git</a></h3>
 </body>
 
 
