specing to redline

--- a/development/terminalfour/src/html/studenthubhome.html
+++ b/development/terminalfour/src/html/studenthubhome.html
@@ -55,7 +55,7 @@
   <style>
     @media (min-width: 768px) {
       header {
-        background: url(https://msudenver.edu/media/studenthub/images/20160823---Student-Hub.jpg) no-repeat;
+        background: url(style-assets/media/images/studenthub/student-hub-bg.png) no-repeat;
         background-size: cover;
         width: 100%;
       }
@@ -90,7 +90,7 @@
     <div class="container-fluid">
       <section class="row">
         <div class="col-sm-12 col-md-6 col-md-push-1">
-          <a href="/" id="home_link"><img src="https://msudenver.edu/media/studenthub/images/msudenver-studenthub2.png"
+          <a href="/" id="home_link"><img src="/style-assets/media/images/studenthub/msudenver_student_hub_logo.svg"
               class="mainLogo" alt="MSU Denver Formal Logo"></a>
           <span class="title">
             <h1>Student Hub</h1>
