--- a/www-root/studenthubhome.html
+++ b/www-root/studenthubhome.html
@@ -295,8 +295,10 @@
       <section class="row">
         <div class="col-sm-12 col-md-10 col-md-push-1">
           <div class="calendar">
-            <div class="title"><span class="main">DATES AND DEADLINES</span> <span class="semester"> <a target="_blank"
-                  href="https://msudenver.edu/events/">Go to Full Calendar</a></span></div>
+            <div class="title">
+              <h2>DATES AND DEADLINES <span class="semester"> <a target="_blank" href="https://msudenver.edu/events/">Go
+                    to Full Calendar</a></span></h2>
+            </div>
             <a href="http://www.msudenver.edu/events/academic/?trumbaEmbed=view%3devent%26eventid%3d117869267"
               target="_blank">
               <div class="col-xs-6 col-md-3 col-lg-2 day">
@@ -353,37 +355,35 @@
   <div class="container-fluid">
     <section class="row">
       <div class="col-xs-12 col-sm-3 col-md-2 left-column">
-        <div>
-          <h3>MET MEDIA</h3>
-        </div>
+        <!-- MET MEDIA header no longer needed, this div is kept to maintain the correct column alignment for the content to follow  -->
       </div><!-- .left-column -->
 
       <div class="col-xs-12 col-sm-9 col-md-9 middle-column">
         <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="http://mymetmedia.com/the-metropolitan/sex-talk-theres-no-thing-normal-sex/" target="_blank">
-            <div class="white content newsfeed">
-              <h4>Sex Talk: There’s no such thing as normal sex</h4>
+            <div class="white content">
+              <span class='text-center'>Sex Talk: There’s no such thing as normal sex</span>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="http://mymetmedia.com/gallery-2/campus-construction-2/" target="_blank">
-            <div class="white content newsfeed">
-              <h4>Campus Construction</h4>
+            <div class="white content">
+              <span class='text-center'>Campus Construction</span>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="http://mymetmedia.com/gallery-2/healthy-tips-3/" target="_blank">
-            <div class="white content newsfeed">
-              <h4>Healthy Tips</h4>
+            <div class="white content">
+              <span class='text-center'>Healthy Tips</span>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="http://mymetmedia.com/gallery-2/air-buds/" target="_blank">
-            <div class="white content newsfeed">
-              <h4>Air Buds</h4>
+            <div class="white content">
+              <span class='text-center'>Air Buds</span>
             </div>
           </a>
         </div>
