Work on info panel

--- a/www-root/admissions.html
+++ b/www-root/admissions.html
@@ -13,7 +13,59 @@
    
 </head>
     <body>
+   <style>
+
+    .panel-button > a {
+      background: #808080;
+      padding: 10px 30px;
+      float: right;
+      color: #fff !important;
+      text-decoration: none;
+      bottom: 0;
+   }
+   .panel-button > a:hover {
+     text-decoration: underline;
+   } 
+ 
+   .row {
+     margin-right: 0px;
+     margin-left: 0px;
+   }
+ 
+ 
+   .panel-button {
+     position: absolute;
+     bottom: 0;
+     right: 0;
+     padding-bottom: 35px;
+     padding-right: 30px;
+     padding-left: 30px;
+   }  
+   
+ </style>  
+ 
+ <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="panel panel-default">
+       <div class="panel-heading">
+       <!--<i class="fa fa-check-square"></i>&nbsp;&nbsp;-->  
+        <h2>The Road to Career Success</h2>
+       </div>
+       <div class="panel-body">
+          <div class="row">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed urna quis velit malesuada varius eu sit amet ex. Sed non tristique justo, maximus fringilla nisi. Nam porttitor erat et elementum dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent molestie quis urna non ullamcorper. Nullam eget nibh aliquam, feugiat mauris id, blandit nibh. Quisque convallis finibus scelerisque. Aliquam non maximus quam. Nam rhoncus elit eget leo dictum facilisis. Vivamus placerat sapien pulvinar ipsum laoreet porta. Sed facilisis aliquam mi non rutrum. Sed ornare ac lectus interdum hendrerit.
+          </div>
+        <div class="row">
+            <div class="panel-button">
+                <p>
+                <a href="https://events.msudenver.edu/productivity">Sign Up For a Seminar Today!</a>
+                </p>
+            </div>
+          </div> 
+       </div>
+    </div>
+ </div>
   
+
         <!-- Global Header -->
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
