--- a/development/terminalfour/src/html/1column.html
+++ b/development/terminalfour/src/html/1column.html
@@ -87,7 +87,7 @@
  
  
    .panel-button {
-     position: absolute;
+     position: relative;
      bottom: 0;
      right: 0;
      padding-bottom: 35px;
@@ -98,18 +98,25 @@
      display: table;
      width: 100%;
    }
+   
+   .panel-default {
+     background-color: white !important;
+   }
 
    .panel .panel-default{
      display: table-cell;
+     background-color: white !important;
+   }
+   .panel-heading{
+     padding: 10px 15px;
    }
  </style>  
  <!--testing info panel-->
 
- <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+ <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <div class="panel panel-default item">
        <div class="panel-heading">
-       <i class="fa fa-check-square"></i>&nbsp;&nbsp;
-        <h2>The Road to Career Success</h2>
+        <h2>The Road</h2>
        </div>
        <div class="panel-body">
           <div class="row">
@@ -124,11 +131,10 @@
        </div>
     </div>
  </div>
- <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 item">
+ <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
   <div class="panel panel-default item">
      <div class="panel-heading">
-     <i class="fa fa-check-square"></i>&nbsp;&nbsp;
-      <h2>The Road to Career Success</h2>
+      <h2>The Road to Career Success is everything</h2>
      </div>
      <div class="panel-body">
         <div class="row">
@@ -144,11 +150,10 @@
      </div>
   </div>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 item">
+<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
   <div class="panel panel-default item">
      <div class="panel-heading">
-     <i class="fa fa-check-square"></i>&nbsp;&nbsp;
-      <h2>The Road to Career Success</h2>
+      <h2>The Road to Career</h2>
      </div>
      <div class="panel-body">
         <div class="row">
